<resources>
    <string name="app_name">Decagon Classroom</string>
    <string name="app_get_started_title">teach</string>
    <string name="app_get_started_description">World-class education for anyone, anywhere.</string>
    <string name="app_sign_up">Sign Up</string>
    <string name="app_login">Log In</string>
    <string name="app_register_title">Decadev Register</string>
    <string name="app_register_description">Please use the email registered with your onboarding to decagon</string>
    <string name="app_register_error">Invalid Email Address</string>
    <string name="app_register_error1">Email Address is required </string>
    <string name="app_submit">Submit</string>
    <string name="app_verification_title">Decadev Verification</string>
    <string name="app_verification_description">Please verify your account with the code send to your mail and choose your stack</string>
    <string name="app_verification_stack_error">Stack is required</string>
    <string name="app_verification_code_error">Code is required</string>
    <string name="app_choose_stack">Choose Stack</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string-array name="stacks">
        <item>Android</item>
        <item>C#</item>
        <item>Java</item>
        <item>Node JS</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="articles">Articles</string>
    <string name="featured_books">Featured books!</string>
    <string name="calendar">calendar</string>
    <string name="notifications">Notifications</string>
    <string name="get_help">Get Help</string>
    <string name="image">image</string>
    <string name="videos">Videos</string>
    <string name="books">Books</string>
    <string name="resources">Resources</string>
    <string name="curriculum">Curriculum</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="filter">filter</string>
</resources>
