<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.decagon.decagonclassroom.views.HomeFragment"
        android:label="@strings/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/resourcesFragment"
        android:name="com.decagon.decagonclassroom.views.ResourcesFragment"
        android:label="@string/resources"
        tools:layout="@layout/fragment_resources" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.decagon.decagonclassroom.views.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/curriculumFragment"
        android:name="com.decagon.decagonclassroom.views.CurriculumFragment"
        android:label="@string/curriculum"
        tools:layout="@layout/fragment_curriculum" />
</navigation>