<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ResourcesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/article_tab_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/articles">

            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/book_tab_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/books">

            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/videos_tab_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/videos">

            </com.google.android.material.tabs.TabItem>

        </com.google.android.material.tabs.TabLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.25"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>