<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_ver"
    tools:context=".VerificationActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/panton_bold_regular"
        android:text="@string/app_verification_title"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="@dimen/landing_text_view_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_verification_description"
        android:textAlignment="center"
        android:textSize="@dimen/font_size_regular"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/stack_dropdown"
        style="@style/SpinnerTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:elevation="2dp"
        android:entries="@array/stacks"
        android:prompt="@string/app_choose_stack"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_bg"
        android:drawableEnd="@drawable/phone_icon"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/code"
        android:inputType="textPersonName"
        android:padding="@dimen/edit_text_padding"
        app:layout_constraintEnd_toEndOf="@+id/stack_dropdown"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/stack_dropdown"
        app:layout_constraintTop_toBottomOf="@+id/stack_dropdown" />

    <Button
        android:id="@+id/submit_ver_btn"
        style="@style/BtnStyle"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/app_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/error_stack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/errorColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/stack_dropdown"
        app:layout_constraintStart_toStartOf="@+id/stack_dropdown"
        app:layout_constraintTop_toBottomOf="@+id/stack_dropdown"
        tools:text="errorr" />

    <TextView
        android:id="@+id/error_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/errorColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:text="errorr" />
</androidx.constraintlayout.widget.ConstraintLayout>